--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas>=1.5
 numpy>=1.24
 requests>=2.28
 tqdm>=4.64
+retry_requests>=0.2  # add version if needed
 
 # Visualization
 matplotlib>=3.7
@@ -17,3 +18,8 @@ rtree>=1.0
 
 # Jupyter and Colab
 jupyterlab>=3.5
+
+# API handling
+requests_cache>=0.10
+python-dotenv>=1.0
+openmeteo-requests>=0.2
